--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -320,7 +320,7 @@
                 if (data.DisplayName.indexOf("אנונימי") != -1) {
                     location.href = "anonymousPatientForm.html";
                 }
-                else location.href = "patientForm.html";
+                else location.href = "patientform.html";
 
             });
 
