--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1937,10 +1937,14 @@
             }
 
             if (numOfEscorts > 0) {
-                numOfPassengers = `<span class="numOfPassengers">${numOfEscorts + 1//+1 is the patient his-self
-                    } נוסעים</span>`;
-                numOfPassengers_English = `<span class="numOfPassengers">${numOfEscorts + 1
-                    } passengers</span>`;
+
+                if (numOfEscorts > 1) {
+                    numOfPassengers = `<span class="numOfPassengers">${numOfEscorts + (ridepat.OnlyEscort ? 0 : 1)//+1 is the patient himself
+                        } נוסעים</span>`;
+                    numOfPassengers_English = `<span class="numOfPassengers">${numOfEscorts + (ridepat.OnlyEscort ? 0 : 1)
+                        } passengers</span>`;
+
+                }
 
                 escortsPhone2render = '<span class="escortsPhone2render block">מלווים: ';
                 numOfRealEscorts = 0;
@@ -2497,7 +2501,7 @@
     </div>
     <div class="ContextMenu_dropdown hidden">
         להסיר סימון עודכן לאחרונה מתא זה?
-            <input onclick="add2IhaveSeenAllready()" class="dropbtn" type="button" value="כן" />
+        <input onclick="add2IhaveSeenAllready()" class="dropbtn" type="button" value="כן" />
     </div>
 </body>
 </html>
