benny candidate code

--- a/Road to Recovery/pages/login1.html
+++ b/Road to Recovery/pages/login1.html
@@ -235,7 +235,8 @@
                                     });
 
                                     setTimeout(function () {
-                                        location.href = "manageRidePats.html";
+                                        //location.href = "manageRidePats.html";
+                                        location.href = "rideCandidates.html";
                                     }, 1001);
                                     GetUserNameByCellphone(userName);
                                     GENERAL.USER.setUserName(userName);
