--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -878,8 +878,7 @@
                             <div class="col-sm-12">
                                 <div class="card-box">
                                     <div class="row">
-                                        <h4 Patient Details" class="m-t-0 header-title"><b data-toggle="tooltip"
-                                                title="تفاصيل المريض">פרטי חולה</b></h4>
+                                        <h4 Patient Details" class="m-t-0 header-title">
                                             <b data-toggle="tooltip"
                                                title="تفاصيل المريض">פרטי חולה</b>
                                         </h4>
