--- a/Road to Recovery/pages/rideCandidates.html
+++ b/Road to Recovery/pages/rideCandidates.html
@@ -1000,6 +1000,9 @@
             console.log(candidates.SuperDriversList);
             console.log("*** Regular Drivers Candidate List ***");
             console.log(candidates.RegularDriversList);
+            console.log("*** Newbies Drivers Candidate List ***");
+            console.log(candidates.NewBies);
+
         }
 
         function getCandidatesErrorCB(err) {
