Monthly metrics Table

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -545,31 +545,70 @@
                             &nbsp;
                         </div>
                     </div>
-                        <div class="row">
-                            <!-- Second row; two more cards  -->
-                            <div class="col-sm-1">
-                                &nbsp;
-                            </div>
-
-                            <div class="col-sm-4">
-                                <canvas id="dsb_hl_card_engaged_volunteers" width="400" height="300"></canvas>
-                            </div>
-
-
-                            <div class="col-sm-2">
-                                &nbsp;
-                            </div>
-
-                            <div class="col-sm-4">
-                                <canvas id="dsb_hl_card_new_volunteers" width="400" height="300"></canvas>
-                            </div>
-
-                            <div class="col-sm-1">
-                                &nbsp;
-                            </div>
+                    <div class="row">
+                        <!-- Third row - Monthly - Table -->
+                        <div class="col-sm-1">
+                            &nbsp;
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">&nbsp;             </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_curr_month_name">           </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_prev_month_name">             </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_yoy_month_name">              </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">חולים          </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_curr_pats"> --            </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_prev_pats">--</div>
+                            <div class="row" id="dsb_hl_monthly_tbl_yoy_pats"> --        </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">הסעות          </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_curr_rides"> --            </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_prev_rides">--</div>
+                            <div class="row" id="dsb_hl_monthly_tbl_yoy_rides"> --        </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">מתנדבים          </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_curr_vols">  --           </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_prev_vols">--</div>
+                            <div class="row" id="dsb_hl_monthly_tbl_yoy_vols"> --        </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">מתנדבים חדשים          </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_curr_new">--             </div>
+                            <div class="row" id="dsb_hl_monthly_tbl_prev_new">--</div>
+                            <div class="row" id="dsb_hl_monthly_tbl_yoy_new">--         </div>
+                        </div>
+                        <div class="col-sm-3">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- Second row; two more cards  -->
+                        <div class="col-sm-1">
+                            &nbsp;
                         </div>
 
+                        <div class="col-sm-4">
+                            <canvas id="dsb_hl_card_engaged_volunteers" width="400" height="300"></canvas>
+                        </div>
+
+
+                        <div class="col-sm-2">
+                            &nbsp;
+                        </div>
+
+                        <div class="col-sm-4">
+                            <canvas id="dsb_hl_card_new_volunteers" width="400" height="300"></canvas>
+                        </div>
+
+                        <div class="col-sm-1">
+                            &nbsp;
+                        </div>
                     </div>
+
+                </div>
                     <div class="row" name="Container_for_wide_tables">
                         <div class="col-sm-12">
                             <div id="div_table_pil_vls_per_month" style="display:none" class="card-box table-responsive">
