Upgrade to chart.js v3.6.0

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -44,7 +44,7 @@
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="../plugins/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="../plugins/chart.js/chart.min.js"></script>
+    <script src="../plugins/chart.js/ver_3_6_0/chart_v360.min.js"></script>
 
     <script src="dataTables.js"></script>
     <script src="moment.js"></script>
